style: fix layout issues

--- a/plugin/components/ChangeAvatar/change-avatar.scss
+++ b/plugin/components/ChangeAvatar/change-avatar.scss
@@ -30,6 +30,7 @@ $bg-color: #9c9c9c;
     height: 32px;
     border: 2px solid transparent;
     outline: 2px solid transparent;
+    padding: 0 !important;
 
     svg {
       width: 20px;
